--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-.row {
+#container {
+    width: 960px;
+    height: 960px;
     display: flex;
+    
 }
 
 .cell {
-    width: 20px;
-    height: 20px;
+    box-sizing: border-box;
     border: 1px solid black;
 }
 
